tests/src/frontend/expand/invalid/expand_unbound_type.sk
fun main(): M.T {
  "Fail"
}
